<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transacciones"
    android:orientation="vertical"
    android:background="@color/black1"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trans"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/azul"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acount"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />
    <TextView
        android:id="@+id/etacount"
        android:layout_width="200dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/acount"
        android:drawableStart="@drawable/card_outline"
        android:inputType="number"
        android:gravity="center"
        android:textColorHint="@color/azul1"
        android:textColor="@color/azul1"
        android:backgroundTint="@color/azul2"
        android:alpha="0.8"
        android:layout_marginBottom="10dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />
    <TextView
        android:id="@+id/tvbalance"
        android:layout_width="200dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/balance"
        android:drawableStart="@drawable/card_outline"
        android:inputType="number"
        android:gravity="center"
        android:textColorHint="@color/azul1"
        android:textColor="@color/azul1"
        android:backgroundTint="@color/azul2"
        android:alpha="0.8"
        android:layout_marginBottom="10dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tdate"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />


    <EditText
        android:id="@+id/etdate"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:alpha="0.8"
        android:backgroundTint="@color/azul2"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:gravity="center"
        android:hint="@string/tdate"
        android:inputType="text"
        android:textColor="@color/azul1"
        android:textColorHint="@color/azul1"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />


    <EditText
        android:id="@+id/ethour"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:alpha="0.8"
        android:backgroundTint="@color/azul2"
        android:drawableStart="@drawable/ic_baseline_hourglass_empty_24"
        android:gravity="center"
        android:hint="@string/hour"
        android:inputType="date"
        android:textColor="@color/azul1"
        android:textColorHint="@color/azul1"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipetrans"
            android:textColor="@color/yellow"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:alpha="0.8"
            >

            <RadioButton
                android:id="@+id/rbretiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retiro"
                android:textColor="@color/azul1"
                android:textSize="20dp"
                />
            <RadioButton
                android:id="@+id/rbconsig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consig"
                android:textColor="@color/azul1"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                />
        </RadioGroup>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />


    <EditText
        android:id="@+id/etvalue"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:backgroundTint="@color/azul2"
        android:drawableStart="@drawable/ic_baseline_monetization_on_24"
        android:gravity="center"
        android:hint="@string/value"
        android:inputType="number"
        android:textColor="@color/azul1"
        android:textColorHint="@color/azul1"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/btntransaction"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/trans"
            android:backgroundTint="@color/azulOsc"
            app:cornerRadius ="20dp"
            />

        <ImageButton
            android:layout_marginLeft="20dp"
            android:id="@+id/btnexit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            android:background="@color/azulOsc"
            android:padding="7dp"

            />
    </LinearLayout>

</LinearLayout>