<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black1"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/azul"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_gravity="center"
        android:textColor="@color/yellow"
        android:layout_marginTop="10dp"


        />
    <EditText
        android:id="@+id/etidclient"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/id"
        android:inputType="number"
        android:gravity="center"
        android:drawableStart="@drawable/ic_baseline_numbers_24"
        android:textColorHint="@color/azul1"
        android:textColor="@color/azul1"
        android:backgroundTint="@color/azul2"
        android:alpha="0.8"
        android:layout_marginBottom="20dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />
    <EditText
        android:id="@+id/etfullname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:gravity="center"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:textColorHint="@color/azul1"
        android:textColor="@color/azul1"
        android:backgroundTint="@color/azul2"
        android:alpha="0.8"
        android:layout_marginBottom="20dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />


    <EditText
        android:id="@+id/etemail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:backgroundTint="@color/azul2"
        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/azul1"
        android:textColorHint="@color/azul1"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"

        />
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:textColorHint="@color/azul1"
        android:textColor="@color/azul1"
        android:backgroundTint="@color/azul2"
        android:alpha="0.8"
        android:layout_marginBottom="20dp"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <ImageButton
            android:id="@+id/btncreate"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_add_24"
            android:background="@color/azulOsc"
            android:padding="7dp"
            />
        <ImageButton
            android:layout_marginLeft="20dp"
            android:id="@+id/btnlogin"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_login_24"
            android:background="@color/azulOsc"
            android:padding="7dp"
            />

    </LinearLayout>


</LinearLayout>